Add note about plugins

--- a/deluge_config/core.conf
+++ b/deluge_config/core.conf
@@ -19,7 +19,8 @@
     "download_location": "/inprogress",
     "download_location_paths_list": [],
     "enabled_plugins": [
-        "AutoAdd"
+        "AutoAdd",
+        "YaRSS2"
     ],
     "enc_in_policy": 1,
     "enc_level": 2,
@@ -28,7 +29,7 @@
     "geoip_db_location": "/usr/share/GeoIP/GeoIP.dat",
     "ignore_limits_on_local_network": true,
     "info_sent": 0.0,
-    "listen_interface": "",
+    "listen_interface": "0.0.0.0",
     "listen_ports": [
         6881,
         6881
