Default to unlimited upload and download

--- a/deluge_config/core.conf
+++ b/deluge_config/core.conf
@@ -19,8 +19,7 @@
     "download_location": "/inprogress",
     "download_location_paths_list": [],
     "enabled_plugins": [
-        "AutoAdd",
-        "YaRSS2"
+        "AutoAdd"
     ],
     "enc_in_policy": 1,
     "enc_level": 2,
@@ -38,10 +37,10 @@
     "listen_reuse_port": true,
     "listen_use_sys_port": false,
     "lsd": true,
-    "max_active_downloading": 3,
-    "max_active_limit": 8,
-    "max_active_seeding": 5,
-    "max_connections_global": 200,
+    "max_active_downloading": -1,
+    "max_active_limit": -1,
+    "max_active_seeding": -1,
+    "max_connections_global": -1,
     "max_connections_per_second": 20,
     "max_connections_per_torrent": -1,
     "max_download_speed": -1.0,
@@ -87,11 +86,11 @@
     "random_port": true,
     "rate_limit_ip_overhead": true,
     "remove_seed_at_ratio": false,
-    "seed_time_limit": 180,
-    "seed_time_ratio_limit": 7.0,
+    "seed_time_limit": -1,
+    "seed_time_ratio_limit": -1.0,
     "send_info": false,
     "sequential_download": false,
-    "share_ratio_limit": 2.0,
+    "share_ratio_limit": -1.0,
     "shared": false,
     "stop_seed_at_ratio": false,
     "stop_seed_ratio": 2.0,
