--- a/deluge_config/core.conf
+++ b/deluge_config/core.conf
@@ -33,7 +33,7 @@
         6881,
         6881
     ],
-    "listen_random_port": 50409,
+    "listen_random_port": null,
     "listen_reuse_port": true,
     "listen_use_sys_port": false,
     "lsd": true,
@@ -48,7 +48,7 @@
     "max_half_open_connections": 20,
     "max_upload_slots_global": 4,
     "max_upload_slots_per_torrent": -1,
-    "max_upload_speed": -1.0,
+    "max_upload_speed": 500.0,
     "max_upload_speed_per_torrent": -1,
     "move_completed": true,
     "move_completed_path": "/downloads",
@@ -83,7 +83,7 @@
     },
     "queue_new_to_top": false,
     "random_outgoing_ports": true,
-    "random_port": true,
+    "random_port": false,
     "rate_limit_ip_overhead": true,
     "remove_seed_at_ratio": false,
     "seed_time_limit": -1,
